crates/turborepo/tests/snapshots/query__basic_monorepo_get_dependencies_of_`my-app`_(npm@10.5.0).snap
---
source: crates/turborepo/tests/query.rs
expression: query_output
---
{
  "data": {
    "packages": {
      "items": [
        {
          "directDependencies": {
            "items": [
              {
                "name": "util"
              }
            ]
          }
        }
      ]
    }
  }
}
