crates/turborepo/tests/snapshots/query__basic_monorepo_get_dependents_of_`util`_(npm@10.5.0).snap
---
source: crates/turborepo/tests/query.rs
expression: query_output
---
{
  "data": {
    "packages": {
      "items": [
        {
          "directDependents": {
            "items": [
              {
                "name": "my-app"
              }
            ]
          }
        }
      ]
    }
  }
}
