crates/turborepo/tests/snapshots/query__basic_monorepo_get_package_graph_(npm@10.5.0).snap
---
source: crates/turborepo/tests/query.rs
expression: query_output
---
{
  "data": {
    "packageGraph": {
      "nodes": {
        "items": [
          {
            "name": "my-app"
          },
          {
            "name": "another"
          },
          {
            "name": "util"
          }
        ]
      },
      "edges": {
        "items": [
          {
            "source": "my-app",
            "target": "util"
          }
        ]
      }
    }
  }
}
