crates/turborepo/tests/snapshots/query__basic_monorepo_get_packages_(npm@10.5.0).snap
---
source: crates/turborepo/tests/query.rs
expression: query_output
---
{
  "data": {
    "packages": {
      "items": [
        {
          "name": "//"
        },
        {
          "name": "another"
        },
        {
          "name": "my-app"
        },
        {
          "name": "util"
        }
      ]
    }
  }
}
