crates/turborepo/tests/snapshots/query__basic_monorepo_get_packages_that_have_a_task_named_`build`_(npm@10.5.0).snap
---
source: crates/turborepo/tests/query.rs
expression: query_output
---
{
  "data": {
    "packages": {
      "items": [
        {
          "name": "my-app"
        },
        {
          "name": "util"
        }
      ]
    }
  }
}
