crates/turborepo/tests/snapshots/query__basic_monorepo_get_packages_with_more_than_0_dependents_(npm@10.5.0).snap
---
source: crates/turborepo/tests/query.rs
expression: query_output
---
{
  "data": {
    "packages": {
      "items": [
        {
          "name": "util",
          "directDependents": {
            "length": 1
          }
        }
      ]
    }
  }
}
